--- a/src/app/styles/layout.scss
+++ b/src/app/styles/layout.scss
@@ -1,4 +1,5 @@
 .layout {
+  padding-top: 6rem;
   min-height: 100vh;
 }
 .layout_content {
